--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -2,10 +2,13 @@
 name: Linter - Workflow
 # Trigger the workflow on push or pull request and include main
 on:
-  push:
-    #branches-ignore: [main]
   pull_request:
-    # branches: [main]
+    types:
+      - opened
+      - synchronize
+  push:
+    branches:
+      - main
 jobs:
   super-linter:
     # Job name
@@ -23,12 +26,16 @@ jobs:
         env:
           LINTER_RULES_PATH: .github/linters
           MARKDOWN_CONFIG_FILE: .markdownlint.json
-          VALIDATE_ALL_CODEBASE: true # will parse the entire repository and find all files to validate across all types. NOTE: When set to false, only new or edited files will be parsed for validation.
+          # Parse the entire repository and find all files to validate across all types.
+          # NOTE: When set to false, only new or edited files will be parsed for validation.
+          VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           VALIDATE_MD: true
           VALIDATE_YML: true
           VALIDATE_HTML: false
-          ACTIONS_RUNNER_DEBUG: false # Flag to enable additional information about the linter, versions, and additional output.
-          DISABLE_ERROR: false # Flag to have the linter complete with exit code 0 even if errors were detected.
+          # Flag to enable additional information about the linter, versions, and additional output.
+          ACTIONS_RUNNER_DEBUG: false
+          # Flag to have the linter complete with exit code 0 even if errors were detected.
+          DISABLE_ERROR: false
           DEFAULT_WORKSPACE: /tmp/lint
