Added SuperLinter Badge and enabled JSON linting

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -31,9 +31,9 @@ jobs:
           VALIDATE_ALL_CODEBASE: true
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_JSON: true
           VALIDATE_MD: true
           VALIDATE_YML: true
-          VALIDATE_HTML: false
           # Flag to enable additional information about the linter, versions, and additional output.
           ACTIONS_RUNNER_DEBUG: false
           # Flag to have the linter complete with exit code 0 even if errors were detected.
