--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -39,7 +39,7 @@ jobs:
           COVERAGE_THRESHOLD=70
           COVERAGE_PERCENTAGE=$(coverage report | awk 'NR==2{print $4}')
           if [ "$COVERAGE_PERCENTAGE" \< "$COVERAGE_THRESHOLD" ]; then
-            echo "Coverage is below the required threshold ($COVERAGE_PERCENTAGE% < $COVERAGE_THRESHOLD%)"
+            echo "Coverage is below the designated threshold ($COVERAGE_PERCENTAGE% < $COVERAGE_THRESHOLD%)"
             exit 1
           fi
 
