Added Helloworld script, associated unit tests and GtHub action workflows

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -37,9 +37,9 @@ jobs:
       - name: Check coverage threshold
         run: |
           COVERAGE_THRESHOLD=70
-          COVERAGE_PERCENTAGE=$(coverage report | awk 'NR==2{print $4}')
-          if [ "$COVERAGE_PERCENTAGE" \< "$COVERAGE_THRESHOLD" ]; then
-            echo "Coverage is below the designated threshold ($COVERAGE_PERCENTAGE% < $COVERAGE_THRESHOLD%)"
+          COVERAGE_PERCENTAGE=$(coverage report | grep TOTAL | awk '{print $NF}')
+          if (( $(awk 'BEGIN {print ("'"$COVERAGE_PERCENTAGE"'" < "'"$COVERAGE_THRESHOLD"'")}') )); then
+            echo "Coverage is below the threshold ($COVERAGE_PERCENTAGE% < $COVERAGE_THRESHOLD%)"
             exit 1
           fi
 
