--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -39,7 +39,7 @@ jobs:
           COVERAGE_THRESHOLD=70
           COVERAGE_PERCENTAGE=$(coverage report | grep TOTAL | awk '{print $NF}')
           if [ "$COVERAGE_PERCENTAGE" -lt "$COVERAGE_THRESHOLD" ]; then
-            echo "Coverage is below the threshold ($COVERAGE_PERCENTAGE% < $COVERAGE_THRESHOLD%)"
+            echo "Coverage is below the required threshold ($COVERAGE_PERCENTAGE% < $COVERAGE_THRESHOLD%)"
             exit 1
           fi
 
