--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -27,5 +27,6 @@ jobs:
     - name: Build and Push Docker image
       run: |
         IMAGE_TAG=${{ steps.extract-version.outputs.version }}
-        docker build -t <dockerhub-username>/<image-name>:${{ IMAGE_TAG }} .
-        docker push <dockerhub-username>/<image-name>:${{ IMAGE_TAG }}
+        docker build -t <dockerhub-username>/<image-name>:${IMAGE_TAG} .
+        docker push <dockerhub-username>/<image-name>:${IMAGE_TAG}
+
