--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -27,7 +27,5 @@ jobs:
     - name: Build and Push Docker image
       run: |
         IMAGE_TAG=${{ env.VERSION }}
-        docker build -t <dockerhub-username>/<image-name>:${IMAGE_TAG} .
-        docker push <dockerhub-username>/<image-name>:${IMAGE_TAG}
-
-
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG} .
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}template-repo-template:${IMAGE_TAG}
