--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -28,4 +28,4 @@ jobs:
       run: |
         IMAGE_TAG=${{ env.VERSION }}
         docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG} .
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}template-repo-template:${IMAGE_TAG}
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG}
