--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -24,3 +24,5 @@ jobs:
         IMAGE_TAG=$(grep -oP "^## \[\K([\d.]+)" CHANGELOG.md | head -n 1)
         docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG} .
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG}
+        docker tag ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:1.5.0 ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:latest
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:latest
