--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -21,8 +21,8 @@ jobs:
 
     - name: Build and Push Docker image
       run: |
-        IMAGE_TAG=$(grep -oP "^## \[\K([\d.]+)" CHANGELOG.md | head -n 1)
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG} .
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG}
-        docker tag ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG} ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:latest
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:latest
+        IMAGE_TAG="$(grep -oP '^## \[\K([\d.]+)' CHANGELOG.md | head -n 1)"
+        docker build -t "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG}" .
+        docker push "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG}"
+        docker tag "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG}" "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:latest"
+        docker push "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:latest"
