--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -19,6 +19,14 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
+    - name: Set IMAGE_TAG variable
+      id: image_tag
+      run: echo "IMAGE_TAG=$(grep -oP '^## \[\K([\d.]+)' CHANGELOG.md | head -n 1)" >> "$GITHUB_ENV"
+
+    - name: Build Docker image
+      run: |
+        docker build -t "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${{ env.IMAGE_TAG }}" .
+
     - name: Scan Docker image for vulnerabilities with Trivy
       uses: aquasecurity/trivy-action@master
       with:
@@ -30,9 +38,8 @@ jobs:
         severity: 'HIGH,CRITICAL'
 
     - name: Build and Push Docker image
+      if: success()  # Only push if the Trivy scan is successful
       run: |
-        IMAGE_TAG="$(grep -oP '^## \[\K([\d.]+)' CHANGELOG.md | head -n 1)"
-        docker build -t "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG}" .
-        docker push "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG}"
-        docker tag "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${IMAGE_TAG}" "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:latest"
+        docker push "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${{ env.IMAGE_TAG }}"
+        docker tag "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:${{ env.IMAGE_TAG }}" "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:latest"
         docker push "${{ secrets.DOCKERHUB_USERNAME }}/template-repo-template:latest"
